# check_mysql

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  check_mysql.ini.example  publish.sh  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: publish.yml  python-package.yml
check_mysql/: __init__.py  __main__.py
check_mysql/cli/: __init__.py  __main__.py  decorators.py  handlers.py
check_mysql/cli/commands/: __init__.py  connections.py  counters.py  init.py  latency.py  longrunning.py  openfiles.py  ping.py  ratios.py  replication.py  security.py  slowqueries.py  sql.py  uptime.py
check_mysql/core/: __init__.py  config.py  connection.py  exceptions.py  logging_config.py  models.py  mysql_client.py  nagios.py  provisioning.py  status.py
check_mysql/services/: __init__.py  connections_service.py  counter_service.py  latency_service.py  longrunning_service.py  openfiles_service.py  ping_service.py  ratio_service.py  replication_service.py  security_service.py  slowqueries_service.py  sql_service.py  uptime_service.py
doc/: code-quality.md  quality-history.csv
scripts/: quality_metrics.py  sonar_gate.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_local_server.py
tests/fixtures/: __init__.py  mock_mysql_client.py  status_data.json
tests/integration/: __init__.py  test_cli_integration.py
tests/unit/: __init__.py  test_config.py  test_connection.py  test_connections_service.py  test_counter_service.py  test_latency_service.py  test_logging_config.py  test_longrunning_service.py  test_mysql_client.py  test_nagios.py  test_openfiles_service.py  test_ping_service.py  test_provisioning.py  test_ratio_service.py  test_replication_service.py  test_security_service.py  test_slowqueries_service.py  test_sql_service.py  test_uptime_service.py
typings/nagiosplugin/: __init__.pyi
typings/pymysql/: __init__.pyi  connections.pyi  cursors.pyi
typings/sshtunnel/: __init__.pyi
wiki/: index.md
wiki-html/: index.html
wiki-html/bootstrap/: index.html  quickstart-piller-check-msdefender-pour-plugin-nagios-mysql-pymysql-tunnel-ssh-948.html
wiki-html/ci/: index.html  publish-quiet-toutes-les-etapes-output-complet-si-erreur-964.html  release-publish-check-mysql-to-pypi-956.html
wiki-html/cli/: index.html  init-check-mysql-init-generer-un-check-mysql-ini-par-defaut-tunnel-ssh-inclus-949.html  init-setup-guide-user-monitoring-sql-creation-test-de-connexion-950.html  ping-retourner-versions-client-et-serveur-954.html  ux-defaut-du-user-de-monitoring-monitoring-nagios-953.html
wiki-html/core/: bug-init-create-user-echoue-du-host-scope-interprete-par-pymysql-unsupported-format-character-952.html  index.html
wiki-html/doc/: doc-synchroniser-la-doc-avec-la-totalite-des-fonctionnalites-965.html  index.html
wiki-html/log/: 2026-07-04.html  index.html
wiki-html/quality/: index.html  test-e2e-sur-serveur-local-check-mysql-ini-955.html
wiki-html/services/: health-backport-des-modes-de-check-mysql-health-lausser-951.html  index.html  sec-report-over-privileged-mysql-accounts-957.html  sec-security-audit-account-checks-root-rename-tls-stale-958.html  sec-security-audit-database-checks-test-db-mysql-schema-959.html  sec-security-audit-execute-permission-checks-udf-routines-961.html  sec-security-audit-full-all-privileges-inventory-962.html  sec-security-audit-password-checks-weak-legacy-policy-960.html  sec-security-audit-privilege-separation-check-963.html
wiki/bootstrap/: index.md  quickstart-piller-check-msdefender-pour-plugin-nagios-mysql-pymysql-tunnel-ssh-948.md
wiki/ci/: index.md  publish-quiet-toutes-les-etapes-output-complet-si-erreur-964.md  release-publish-check-mysql-to-pypi-956.md
wiki/cli/: index.md  init-check-mysql-init-generer-un-check-mysql-ini-par-defaut-tunnel-ssh-inclus-949.md  init-setup-guide-user-monitoring-sql-creation-test-de-connexion-950.md  ping-retourner-versions-client-et-serveur-954.md  ux-defaut-du-user-de-monitoring-monitoring-nagios-953.md
wiki/core/: bug-init-create-user-echoue-du-host-scope-interprete-par-pymysql-unsupported-format-character-952.md  index.md
wiki/doc/: doc-synchroniser-la-doc-avec-la-totalite-des-fonctionnalites-965.md  index.md
wiki/log/: 2026-07-04.md  index.md
wiki/quality/: index.md  test-e2e-sur-serveur-local-check-mysql-ini-955.md
wiki/services/: health-backport-des-modes-de-check-mysql-health-lausser-951.md  index.md  sec-report-over-privileged-mysql-accounts-957.md  sec-security-audit-account-checks-root-rename-tls-stale-958.md  sec-security-audit-database-checks-test-db-mysql-schema-959.md  sec-security-audit-execute-permission-checks-udf-routines-961.md  sec-security-audit-full-all-privileges-inventory-962.md  sec-security-audit-password-checks-weak-legacy-policy-960.md  sec-security-audit-privilege-separation-check-963.md
